--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -154,6 +156,15 @@
    ],
    "source": [
     "friends['no_of_seasons']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friends[]"
    ]
   },
   {
