Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -295,11 +295,10 @@
        " 'genre': 'sitcom',\n",
        " 'no_of_seasons': 10,\n",
        " 'no_of_episodes': 236,\n",
-       " 'candle': 'vanilla',\n",
        " 8: 'niece'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,11 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'vanilla'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "friends.pop()"
+    "friends.pop('candle')"
    ]
   },
   {
