Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -326,6 +328,13 @@
    "source": [
     "friends.pop('candle')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
