Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "friends.pop()"
+   ]
   },
   {
    "cell_type": "markdown",
