--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -294,11 +294,10 @@
        "{'name': 'Friends',\n",
        " 'genre': 'sitcom',\n",
        " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 236,\n",
-       " 8: 'niece'}"
+       " 'no_of_episodes': 236}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,11 +330,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'niece'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "friends.pop()"
+    "friends.pop(8)"
    ]
   },
   {
