Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -616,16 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seinfeld['patrick'] = ['ryan', 'murray']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -637,11 +628,10 @@
        " 'creators': ['Larry David', 'Jerry Seinfeld'],\n",
        " 'genre': 'sitcom',\n",
        " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 180,\n",
-       " 'patrick': ['ryan', 'murray']}"
+       " 'no_of_episodes': 180}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
