Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -700,11 +700,10 @@
        " 'creators': ['Larry David', 'Jerry Seinfeld'],\n",
        " 'genre': 'sitcom',\n",
        " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 180,\n",
-       " 'patrick': ['ryan', 'murray']}"
+       " 'no_of_episodes': 180}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
