Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -767,6 +767,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seinfeld['patrick'] = ['ryan', 'murray']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
