Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -771,7 +771,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tv_shows[]"
+   ]
   },
   {
    "cell_type": "code",
