--- a/index.ipynb
+++ b/index.ipynb
@@ -768,11 +768,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'David Crane'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tv_shows[0][]"
+    "tv_shows[0]['creators'][0]"
    ]
   },
   {
