--- a/index.ipynb
+++ b/index.ipynb
@@ -768,22 +768,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'David Crane'"
+       "'Marta Kauffman'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tv_shows[0]['creators'][]"
+    "tv_shows[0]['creators'][1]"
    ]
   },
   {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "'Jerry Seinfeld'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
